css tweaks, added components

--- a/src/pages/newPost.mdx
+++ b/src/pages/newPost.mdx
@@ -1,7 +1,13 @@
 
-# Hello World
+<TextDivider text="Hello World"/>
 
-This is my first blog post written with **MDX**. It’s awesome!
 
-- It supports **Markdown**.
-- You can embed React components!
+QUOTE COMPONENT
+<Quote>
+    "TEST QUOTE"
+
+    -chairman mao
+</Quote>
+
+
+SECTION DIVIDER COMPONENT
